# pytest-junit-xray-xml

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: create-draft-release.yml  publish-to-pypi.yml  python-package.yml  test.yml
src/: __init__.py  exceptions.py  fixtures.py  junit_xml_xray.py  junit_xml_xray_xml.py  plugin.py  utils.py
tests/: test_junit_xray_xml.py
